--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-body{
-    background-color: rgb(255, 255, 255);
-}
 h1 {
     text-align: center;
     
@@ -12,14 +9,10 @@ p{
     color: rgb(39, 94, 184);
 }
 
-#budg-btn {
+button {
     background-color: rgb(112, 182, 112);
     color: white;
     cursor: pointer;
-    border-width: 0px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 10px;
 }
 
 button:hover {
