--- a/css/Budgetstyle.css
+++ b/css/Budgetstyle.css
@@ -1,3 +1,8 @@
+#space{
+   padding-right: 5rem;
+   padding-left: 5rem;
+}
+
 #div1{
    display: flex; 
    justify-content: center; 
@@ -35,4 +40,7 @@
     width: 200px;
     height: auto;
     max-height: 75%;
+    border-radius: 50%; /* Makes the image circular */
+    border: 2px solid rgb(130, 176, 138); /* Optional: Adds a border around the circle */
+    object-fit:contain; /* Ensures the image fits within the circle without distortion */
  }
