--- a/css/Finance_Tips.css
+++ b/css/Finance_Tips.css
@@ -4,6 +4,7 @@
 }
 .nav{
     display: flex;
+    overflow: hidden;
     justify-content: space-around;
     height: auto;
     background-color: rgb(74, 134, 74);
@@ -21,6 +22,8 @@
 }
 
 
+
+
 #into-img{
     width: 35%;
     height: auto;
@@ -35,4 +38,10 @@
 
 #zeroBased{
     border-width: 1px;
+}
+#zeroBase a{
+    text-decoration: none;
+    padding: ;
+    display: ;
+    font-size: 16px;
 }
