--- a/css/Credit_Info.css
+++ b/css/Credit_Info.css
@@ -1,10 +1,44 @@
+/* GENERAL */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+p {
+  color: rgb(85, 85, 85);
+}
+
+
+
+nav {
+    display: inline-block;
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh;
+}
+
 .nav-links{
     background-color: rgb(103, 204, 90);
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .nav-links a {
     float: left;
+    display: block;
     color: rgb(255, 255, 255);
     text-align: center;
     padding: 14px 16px;
@@ -22,3 +56,16 @@
     background-color: aquamarine;
     color: white;
 }
+
+
+section {
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+  }
+  
+  .section-container {
+    display: flex;
+  }
