--- a/css/Finance_Tips.css
+++ b/css/Finance_Tips.css
@@ -2,6 +2,10 @@
     padding-left: 12rem;
     padding-right: 12rem;
 }
+body{
+    margin: 0;
+    padding: 0;
+}
 .nav{
     display: flex;
     overflow: hidden;
