--- a/css/Credit_Info.css
+++ b/css/Credit_Info.css
@@ -83,3 +83,15 @@ section {
   height: 50%;
 }
 
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
