--- a/css/Budgetstyle.css
+++ b/css/Budgetstyle.css
@@ -3,23 +3,39 @@
    padding-left: 5rem;
 }
 
-#div1{
+#tree-img{
    display: flex; 
    justify-content: center; 
 
+}
+.nav{
+   display: flex;
+   overflow: hidden;
+   justify-content: space-around;
+   height: auto;
+   background-color: rgb(74, 134, 74);
+}
+.nav a {
+   color: white;                  
+   text-decoration: none;         
+   padding: 14px 15px;            
+   display: inline-block;         
+   font-size: 16px;               
+}
+.nav a:hover {
+   background-color: rgb(112,182,112);     
+   border-radius: 4px;            
 }
 .greenborder {
     border: 5px solid rgb(57, 104, 70); /* Adds a black border of 2 pixels */
     background: rgb(150, 191, 150);
     margin: 25px; /* Optional: Adds space inside the border */
-    padding: 50px 50px; /* Optional: Adds space above and below each paragraph */
     border-radius: 15px; /* Rounds the corners */
- }
+}
 
- p{
+p{
     color: white;
     font-size: x-large;
-    padding: 25px; /* Optional: Adds space inside the border */
     margin: 30px 30px; /* Optional: Adds space above and below each paragraph */
     text-align: left;
  }
@@ -91,6 +107,8 @@
 }
 
 #btn{
+   display: flex;
+   justify-content: center;
    background-color: rgb(112, 182, 112);
    color: white;
    cursor: pointer;
@@ -99,6 +117,9 @@
    padding-right: 15px;
    border-radius: 10px;
    margin-bottom: 200px;
+}
+#btn:hover {
+   background-color: rgb(48, 122, 48);
 }
 
 #btn1{
@@ -112,9 +133,10 @@
    margin-bottom: 200px;
 }
 
-#btn:hover {
+#btn1:hover {
    background-color: rgb(48, 122, 48);
 }
+
 
 .image {
    float: right; /* Move image to the left side */
@@ -124,4 +146,10 @@
 }
 .text-group {
    overflow: hidden; /* Ensure text flows properly around the image */
+}
+
+.colom{
+   border: 1px solid #555;
+   border-radius: 15px;
+   padding: 0.5rem;
 }
