--- a/css/homePage.css
+++ b/css/homePage.css
@@ -1,10 +1,17 @@
 body{
     background-color: rgb(255, 255, 255);
 }
-h1 {
+h1{
     text-align: center;
-    
-}
+    color:rgb(150, 191, 159);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-shadow: 
+                -1px -1px 0 rgb(57, 104, 70),
+                1px -1px 0 rgb(57, 104, 70),
+                -1px 1px 0 rgb(57, 104, 70),
+                1px 1px 0 rgb(57, 104, 70); /* Create an outline */
+    font-size: 500%;
+    Margin: 60px 0px;}
 
 p{
     text-align: center;
